# doc2md

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: EXECUTION_PLAN.md  PLAN_INDEX.md  ai_integration.md  architecture.md  capabilities.md  output_schema.md  performance.md  troubleshooting.md  user_manual.md
docs/examples/: sample.html  sample_digital_output.md  sample_docx_output.md  sample_html_output.md
scripts/: generate_fixtures.py  install_wsl.sh
src/doc2md/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py
src/doc2md/converters/: docx.py  epub.py  html.py  image.py  odt.py  pdf_digital.py  pdf_locked.py  pdf_mixed.py  pdf_scanned.py  txt.py
src/doc2md/core/: base_converter.py  detector.py  dispatcher.py  document.py  exceptions.py  pipeline.py  validator.py
src/doc2md/images/: extractor.py  naming.py  vlm_client.py  vlm_pricing.py
src/doc2md/ocr/: quality.py  tesseract_runner.py
src/doc2md/rendering/: frontmatter.py  images_strategy.py  index_builder.py  markdown_renderer.py  page_anchors.py  sanitizer.py  table_renderer.py
src/doc2md/utils/: fs.py  pdf_unlock.py  progress.py  text_heuristics.py
tests/: conftest.py
tests/converters/: test_docx.py  test_epub.py  test_html.py  test_image.py  test_odt.py  test_pdf_digital.py  test_pdf_locked.py  test_pdf_scanned.py  test_txt.py
tests/fixtures/: sample.docx  sample.epub  sample.odt  sample.txt
tests/integration/: test_cli_batch.py  test_cli_single_file.py  test_full_pipeline.py  test_install_script.py  test_vlm_mocked.py
tests/unit/: test_detector.py  test_dispatcher.py  test_frontmatter.py  test_fs.py  test_images_strategy.py  test_index_builder.py  test_logging.py  test_page_anchors.py  test_pdf_unlock.py  test_public_api.py  test_sanitizer.py  test_table_renderer.py  test_validator.py  test_vlm_pricing.py
