[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2md"
version = "0.1.0"
description = "Convert PDFs, office documents, ebooks, HTML, text, and images into schema-compliant Markdown."
readme = "README.md"
license = "MIT"
authors = [
    { name = "doc2md contributors" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4",
    "chardet",
    "docling==2.92.0",
    "ebooklib",
    "httpx",
    "langdetect",
    "markitdown",
    "openai",
    "pillow",
    "pytesseract",
    "pypandoc",
    "python-docx",
    "typer",
    "pymupdf",
    "pyyaml",
    "python-magic",
    "pydantic>=2",
    "markdownify",
    "tenacity",
    "tqdm",
]

[project.scripts]
doc2md = "doc2md.cli:main"

[project.optional-dependencies]
dev = [
    "isort",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "mypy",
]

anthropic = [
    "anthropic",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doc2md"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict_optional = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "bs4.*",
    "chardet.*",
    "docling.*",
    "docx.*",
    "ebooklib.*",
    "fitz",
    "httpx",
    "langdetect",
    "markdownify.*",
    "markitdown.*",
    "openai.*",
    "pypandoc",
    "pypandoc.*",
    "pytesseract",
    "tenacity.*",
    "tqdm.*",
    "yaml",
]
ignore_missing_imports = true
